--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ body {
 }
 
 .command.list > .item {
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -317,7 +318,6 @@ body {
 .link-social-networks:focus{
   color: var(--white-text);
   background-color: var(--focus-color);
-
 }
 
 
@@ -344,13 +344,12 @@ body {
   display: inline-block;
   width: 170px;
   height: 92px;
-  
   border: 1px solid var(--color-links);
   border-radius: 4px;
   color: var(--color-links);
   /* Хз как сделать по другому. свг центрируется в кнопке, хз как сделать в ссылке */
   text-align: center;
-  padding-top: 23px;
+  padding-top: 16px;
 
 }
 
@@ -358,13 +357,14 @@ body {
 
 
 .partner-logo {
+
   fill: currentColor;
 }
 
-.partner-logo:hover,
-.partner-logo:focus {
-  color: var(--white-text);
-  background-color: var(--focus-color);
+.link-partner:hover,
+.link-partner:focus {
+  color: var(--focus-color);
+  border-color: var(--focus-color);
 
 }
 
@@ -400,8 +400,9 @@ body {
 .filter button:focus {
   color: var(--white-text);
   background: var(--focus-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Example */
@@ -441,7 +442,10 @@ body {
   gap: 30px;
 }
 
-.portfolio.list .item {
+.portfolio.list .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+  0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .sign {
@@ -457,8 +461,33 @@ body {
 }
 
 .footer > .container {
+  display: flex;
   padding-bottom: 60px;
   padding-top: 60px;
+  gap: 70px;
+}
+
+.center-footer{
+  padding-top: 12px;
+}
+
+.footer-title{
+  margin: 0;
+  margin-bottom: 20px;
+  text-transform: uppercase;;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--white-text);
+}
+
+
+.center-footer .link-social-networks {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.center-footer .link-social-networks:hover,
+.center-footer .link-social-networks:focus {
+  background-color: #2196f3;
 }
 
 .adress {
